# ReservBot

./: dockercompose.yml  pyproject.toml  run.py
src/: config.py  schemas.py
src/database/migrations/: env.py
src/database/migrations/versions/: e1b5da8bf35f_added_table_schedule.py
src/database/models/: schedule.py
src/handlers/: __init__.py  start.py
src/handlers/panel_for_admin/: admin_panel.py
src/handlers/panel_for_user/: schedule_management.py  user_panel.py
src/utils/keyboard/: admin.py  user.py
